--- a/pgups/templates/pgups/competition_team.html
+++ b/pgups/templates/pgups/competition_team.html
@@ -5,7 +5,7 @@
 <div class="container">
 
 	<div class="heading">
-		<h2 class="bold">Команда {{team.name}}</h2>
+		<h2><b>Команда {{team.name}}</b></h2>
 	</div>
 
 	<table class="single-cdsg-table table table-striped table-hover table-bordered">
