--- a/pgups/templates/pgups/index.html
+++ b/pgups/templates/pgups/index.html
@@ -4,9 +4,9 @@
 
 <div class="container">
 	<div class="heading">
-		<h1 class="bold">Соревнования</h1>
+		<h1><b>Соревнования</b></h1>
 	</div>
-	<ul class="list larger">
+	<ul class="basic-list basic-list-larger">
 		{% for competition in competitions %}
 		<li>
 			<a href="competition/{{competition.id}}/">
