--- a/pgups/templates/pgups/results_starts.html
+++ b/pgups/templates/pgups/results_starts.html
@@ -2,17 +2,22 @@
 {% load staticfiles %}
 {% block content %}
 <div class="container">
+
 	<div class="heading">
 		<a href="{% url 'competition' competition_id=competition.id %}">
-			<h1 class="bold">{{competition.name}}</h1>
+			<h1><b>{{competition.name}}</b></h1>
 		</a>
 		<h2>Результаты по заплывам и дорожкам</h2>
 	</div>
+
 	{% for start in starts%}
+
 	<div class="single-cdsg">
+
 		<div class="single-cdsg-start-num">
 			<span class="start-num">Заплыв {{start.num}}</span>
 		</div>
+
 		<table class="single-cdsg-table table table-striped table-hover table-bordered">
 			<tbody>
 			{% for order in start.order_set.all %}
@@ -32,7 +37,9 @@
 			{% endfor %}
 			</tbody>
 		</table>
+
 	</div>
+
 	{% endfor %}
 </div>
 {% endblock %}
