--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -5,14 +5,14 @@
 <div class="container">
 
 	<div class="heading">
-		<h2 class="bold">{{userrequest.team}} ({{userrequest.date|date:"d.m.Y"}})</h2>
+		<h2><b>{{userrequest.team}} ({{userrequest.date|date:"d.m.Y"}})</b></h2>
 	</div>
 
 	<h3>Участники:</h3>
-	<ol class="list">
+	<ol>
 		{% for competitor in userrequest.competitor_set.all %}
 			<li>
-				<a href="../../person/{{competitor.person.id}}/">{{competitor.person}} : {{competitor.tour}}</a>
+				<a href="../../person/{{competitor.person.id}}/"><b>{{competitor.person}}</b>: {{competitor.tour}}</a>
 			</li>
 		{% endfor %}
 	</ol>
