--- a/pgups/templates/pgups/person.html
+++ b/pgups/templates/pgups/person.html
@@ -4,12 +4,12 @@
 
 <div class="container">
 	<div class="heading">
-		<h3>{{person.first_name}} {{person.last_name}} (<!--{{person.gender}}-->{{person.birth_year}})</h3>
+		<h1>{{person.first_name}} {{person.last_name}} ({{person.birth_year}})</h1>
 	</div>
 
-	<h4>Участие:</h4>
+	<h2>Участие:</h2>
 
-	<ul class="list">
+	<ul class="basic-list">
 		{% for competitor in person.competitor_set.all %}
 		<li>
 			{{competitor.userrequest.competition}}: {{competitor.tour}}
