--- a/pgups/templates/pgups/results_teams.html
+++ b/pgups/templates/pgups/results_teams.html
@@ -2,26 +2,30 @@
 {% load staticfiles %}
 {% block content %}
 <div class="container">
+
 	<div class="heading">
 		<a href="{% url 'competition' competition_id=competition.id %}">
-			<h1 class="bold">{{competition.name}}</h1>
+			<h1><b>{{competition.name}}</b></h1>
 		</a>
 		<h2>Результаты по командам</h2>
 	</div>
+
 	<div class="row">
-			<div class="col-lg-6 col-md-7 col-sm-8 col-xs-10">
-				<table class="result-tour-table table table-striped table-hover table-bordered">
-					<tbody>
-					{% for k,v in result.items %}
-						{{result_form.id}}
-						<tr>
-							<td class="result-tour-name">{{k}}</td>
-							<td class="result-tour-result">{{v}}</td>
-						</tr>
-					{% endfor %}
-					</tbody>
-				</table>
-			</div>
+		<div class="col-lg-6 col-md-7 col-sm-8 col-xs-10">
+
+			<table class="result-tour-table table table-striped table-hover table-bordered">
+				<tbody>
+				{% for k,v in result.items %}
+					{{result_form.id}}
+					<tr>
+						<td class="result-tour-name">{{k}}</td>
+						<td class="result-tour-result">{{v}}</td>
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+			
+		</div>
 	</div>
 </div>
 {% endblock %}
