--- a/pgups/templates/pgups/tour.html
+++ b/pgups/templates/pgups/tour.html
@@ -5,7 +5,7 @@
 <div class="container">
 
 	<div class="heading">
-		<h2 class="bold">{{tour_name}}</h2>
+		<h2><b>{{tour_name}}</b></h2>
 	</div>
 
 	<div class="row">
