judequinn.angularjs added persons to scope

--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -205,7 +205,7 @@
 
 			<br>
 
-		</div>
+		</div> <!-- End of container -->
 
 			<!-- Jumbotron -->
 			<div class="jumbotron">
@@ -228,7 +228,6 @@
 			</div> <!-- End of jumbotron -->
 
 
-		</form> <!-- End of Request Form -->
 
 	</div> <!-- End of validationApp -->
 
