--- a/pgups/templates/pgups/competition_starts.html
+++ b/pgups/templates/pgups/competition_starts.html
@@ -1,42 +1,51 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
 {% block content %}
+
 <div class="container">
 
-{% for cdsg in cdsg_list %}
+	<!-- Heading -->
+	<div class="heading heading-no-margin">
+		<a href="{% url 'competition' competition_id=competition.id %}">
+			<h1><b>{{competition.name}}</b></h1>
+		</a>
+	</div> <!-- End of Heading -->
 
-	<div class="single-cdsg row">
+	{% for cdsg in cdsg_list %}
 
-		<h3 class="single-cdsg-heading bold">{{cdsg.name}}</h3>
+		<!-- Single start -->
+		<div class="single-start-container">
 
-		{% for start in cdsg.start_set.all %}
+			<h2><b>{{cdsg.name}}</b></h2>
 
-		<div class="single-cdsg-start">
-		
-			<div class="single-cdsg-start-num">
-				<span class="start-num">Заплыв {{start.num}}</span> 
-				{% if user.is_authenticated %}
-					<a class="start-results pull-right btn btn-info" href="../../start_result/{{start.id}}/">Результат</a>
-				{% endif %}
-			</div>
+			{% for start in cdsg.start_set.all %}
 
-			<table class="single-cdsg-table table table-striped table-hover table-bordered">
-				<tbody>
-				{% for order in start.order_set.all %}
-					<tr>
-						<td class="order-lane text-center col-md-1">{{order.lane}}</td>
-						<td class="order-name">{{order.competitor.person.first_name}} {{order.competitor.person.last_name}}</td>
-						<td class="order-team">{{order.competitor.userrequest.team}}</td>
-						<td class="order-age text-center">{{order.competitor.age}}</td>
-						<td class="order-time text-center">{{order.competitor.prior_time}}</td>
-					</tr>
-				{% endfor %}
-				</tbody>
-			</table>
+				<!-- Start number -->
+				<div class="start-number">
+					<h3 class="pull-left">Заплыв {{start.num}}</h3>
+					{% if user.is_authenticated %}
+						<a class="btn-results pull-right btn btn-info" href="../../start_result/{{start.id}}/">Результат</a>
+					{% endif %}
+				</div> <!-- End of Start number -->
 
-		</div>
-		{% endfor %}
-	</div>
-{% endfor %}
+				<table class="table table-striped table-hover table-bordered">
+					<tbody>
+					{% for order in start.order_set.all %}
+						<tr>
+							<td class="column-lane text-center">{{order.lane}}</td>
+							<td class="column-name">{{order.competitor.person.first_name}} {{order.competitor.person.last_name}}</td>
+							<td class="column-team">{{order.competitor.userrequest.team}}</td>
+							<td class="column-age text-center">{{order.competitor.age}}</td>
+							<td class="column-time text-center">{{order.competitor.prior_time}}</td>
+						</tr>
+					{% endfor %}
+					</tbody>
+				</table>
+
+			{% endfor %}
+
+		</div> <!-- End of Single start -->
+
+	{% endfor %}
 </div>
 {% endblock %}
