--- a/pgups/templates/pgups/results_teams.html
+++ b/pgups/templates/pgups/results_teams.html
@@ -3,28 +3,29 @@
 {% block content %}
 <div class="container">
 
+	<!-- Heading -->
 	<div class="heading">
 		<a href="{% url 'competition' competition_id=competition.id %}">
 			<h1><b>{{competition.name}}</b></h1>
 		</a>
 		<h2>Результаты по командам</h2>
-	</div>
+	</div> <!-- End of Heading -->
 
 	<div class="row">
 		<div class="col-lg-6 col-md-7 col-sm-8 col-xs-10">
 
-			<table class="result-tour-table table table-striped table-hover table-bordered">
+			<table class="table table-striped table-hover table-bordered">
 				<tbody>
 				{% for k,v in result.items %}
 					{{result_form.id}}
 					<tr>
-						<td class="result-tour-name">{{k}}</td>
-						<td class="result-tour-result">{{v}}</td>
+						<td class="column-name-wide">{{k}}</td>
+						<td class="column-result-wide">{{v}}</td>
 					</tr>
 				{% endfor %}
 				</tbody>
 			</table>
-			
+
 		</div>
 	</div>
 </div>
