--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -1,43 +1,59 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
 {% block content %}
+
+<!-- Notie messages -->
+{% for message in messages %}
+	<script src="{% static 'js/notie.js' %}"></script>
+	<script> notie.alert(1, 'Результат сохранён!', 0.5); </script>
+{% endfor %}
+
 <div class="container">
-	<div class="result row">
-		<div class="single-cdsg-start-num">
-			<span class="start-num">Заплыв {{start_num}} ({{cdsg_name}})</span>
-			<a class="btn btn-info pull-right" href="../../starts/{{competition_id}}/">Все старты</a>
-		</div>
-		<table class="single-cdsg-table result-table table table-striped table-hover table-bordered">
+
+	<div class="row">
+
+		<!-- Start number -->
+		<div class="start-number">
+			<h3 class="pull-left">Заплыв {{start_num}} ({{cdsg_name}})</h3>
+			<a class="btn-results btn btn-info pull-right" href="../../starts/{{competition_id}}/">Все старты</a>
+		</div> <!-- End of Start number -->
+
+		<table class="table table-striped table-hover table-bordered">
 			<tbody>
 			{% for result in results %}
+
 				<tr>
-					<td class="order-name">{{result.competitor.person.first_name}} {{result.competitor.person.last_name}}</td>
-					<td class="order-team">{{result.competitor.userrequest.team.name}}</td>
-					<td class="order-age text-center">{{result.competitor.age}}</td>
-					<td class="order-time order-time-animation text-center">{{result.time}}</td>
+					<td class="column-name">{{result.competitor.person.first_name}} {{result.competitor.person.last_name}}</td>
+					<td class="column-team">{{result.competitor.userrequest.team.name}}</td>
+					<td class="column-age text-center">{{result.competitor.age}}</td>
+					<td class="column-time column-time-animation text-center">{{result.time}}</td>
 				</tr>
+
 			{% endfor %}
 			</tbody>
 		</table>
+
 		<a class="btn btn-default pull-right" href="../../start_result/{{start_id}}/">Редактировать</a>
-		{% for message in messages %}
-			<!--<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>-->
-			<script src="{% static 'js/notie.js' %}"></script>
-			<script> notie.alert(1, 'Результат сохранён!', 0.5); </script> <!-- Notie -->
-		{% endfor %}
+
 	</div>
-	<div class="next-start row">
+
+	<div class="row">
+
 	<hr>
+
 	{% if prev_start_id %}
 		<a class="btn btn-primary pull-left" href="../../start_result/{{prev_start_id}}/">
-			Предыдущий заплыв <span class="glyphicon glyphicon-chevron-left"></span>
+			<span class="glyphicon glyphicon-chevron-left"></span> Предыдущий заплыв
 		</a>
 	{% endif %}
+
 	{% if next_start_id %}
 		<a class="btn btn-primary pull-right" href="../../start_result/{{next_start_id}}/">
 			Следующий заплыв <span class="glyphicon glyphicon-chevron-right"></span>
 		</a>
 	{% endif %}
+
 	</div>
+
 </div>
 {% endblock %}
