--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -4,9 +4,17 @@
 
 <div class="container">
 
+	<!-- Heading -->
 	<div class="heading">
-		<h2><b>{{userrequest.team}} ({{userrequest.date|date:"d.m.Y"}})</b></h2>
-	</div>
+		<h2><b>
+			{% if userrequest.team %}
+			{{userrequest.team}}
+			{% else %}
+			Индивидуальная заявка
+			{% endif %}
+			 ({{userrequest.date|date:"d.m.Y"}})
+		</b></h2>
+	</div> <!--End of Heading -->
 
 	<h3>Участники:</h3>
 	<ol>
