judequinn.angularjs fixed removePerson function

--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -194,14 +194,14 @@
 
 			<form> <!-- End of Person form -->
 
-			{$ persons $}
+
 
 
 
 			<hr>
 
 			<!-- Add person button -->
-			<a href="#" class="btn btn-default btn-lg" ng-click="addPerson()">Добавить участника</a>
+			<a id="addPersonBtn" href="#" class="btn btn-default btn-lg" ng-click="addPerson()">Добавить участника</a>
 
 			<br>
 
